date Version 3.00.51
^ No longer creating a temporary file on disk for the XRC Preview.
* FS#247 - "Invalid macro generated by wxFB."
* FS#248 - "Property choices of wxChoice: Strings with single quotes are truncated"
  This forced incrementing the .fbp version to 1.9
* FS#249 - "Paste From Clipboard requires Administrator privileges on Vista"

09/27/2007 Version 3.00.50 (RC3)
* FS#234 - "wxFrame name parameter not available."
* Property values are no longer trimmed for whitespace when projects are loaded.
* FS#235 - "Events don't (always) get attached to the proper object."
^ Common Events are now shared by all controls.
* Now clearing the dirty flag when all changes are undone.
* Cleaned up the selection of objects on undo/redo.
* FS#236 - "include path for XPM Data incorrect."
^ All paths are now generated with '/' as a separator.
* Secondary bitmaps of wxBitmapButton are now only generated to XRC if they are used.
* The "select" property of notebook pages now corresponds to "selected" in XRC.
* Improved XRC import:
    - Sizers are inserted if necessary and possible.
    - Properties are now imported correctly where they used to fail in rare cases.
    - New and informative warnings if an object cannot be imported.
* FS#57 - "Can't add toolbar to non-frame containers."
* FS#238 - "Crash on Negative Number to growable* properties."
^ Auto sash positioning can now be disabled by setting /mainframe/AutoSash=0 in the config.
^ Enabled live pane update when dragging sashes.
* FS#239 - "button.h not included when adding StdDialogButtonSizer."
* On Windows, Ctrl+C did not copy text from code editor when an object was not selected.
* FS#241 - "<wx/statbox.h> not included in generated header."
* Removed minimum size from code windows so the tabs and scrollbars no longer disappear as the window is shrinking.
* FS#242 - "wxFB does not respect current working directory."
^ FS#246 - "Header file should be written to disk only if changed."

09/06/2007 Version 3.00.49 (RC2)